--- a/Tug.html
+++ b/Tug.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Tug</h1>
-    <img src="Tug.JPG" alt="Meow" width="500" height="700">
+    <img src="Tug.jpg" alt="Meow" width="500" height="700">
   </body>
 </html>
